# leech

./: .flake8  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  README.markdown  README.md  cover.py  epub.py  fetch.py  leech.py  pyproject.toml  requirements.txt
.github/workflows/: python-package-poetry.yml
_leech/: chapter.py  cover.py  epub.py  story.py
ebook/: __init__.py  cover.py  epub.py  image.py
examples/: cultivationchatgroup.json  deathworlders.json  dungeonkeeperami.json  fifthdefiance.json  heretical-edge-2.json  heretical-edge.json  iamgoingtodie.json  pact.json  paeantosmac.json  pale-lights.json  pale-withextras.json  pale.json  phoenixdestiny.json  practial5.json  practical1.json  practical2.json  practical3.json  practical4.json  practical5.json  practical6.json  practical7.json  practical_all.json  practicalall.json  practicalextra.json  sagaofsoul.json  shouldthesun.json  thegodsarebastards.json  twig.json  unsong.json  vacantthrone.json  wanderinginn.json  ward.json  worm.json
reader/: __init__.py
sites/: __init__.py  ao3.py  arbitrary.py  deviantart.py  fanfictionnet.py  fictionlive.py  patreon.py  royalroad.py  spacebattles.py  spacebattles_indexpost.py  stash.py  wattpad.py  xenforo.py  xenforo2.py
src/leech/: __init__.py  leech.py
src/leech/ebook/: epub.py
src/leech/sites/: __init__.py  deviantart.py  fictionlive.py  royalroad.py  stash.py  xenforo.py
tests/: conftest.py  test_epub.py
tests/sites/arbitrary/: test_basic.py
