[tool.poetry]
name = "leech"
version = "1.0.0"
description = "Turn a story on certain websites into an ebook for convenient reading"
authors = ["David Lynch <kemayo@gmail.com>"]
license = "MIT License"
include = ["ebook/*", "sites/*"]

[tool.poetry.scripts]
leech = "leech:cli"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^25.1.0"
beautifulsoup4 = "^4.13.3"
click-default-group = "^1.2.4"
click = "^8.1.8"
requests = "^2.32.3"
requests-cache = "^1.2.1"
Pillow = "^11.1.0"
mintotp = "^0.3.0"
lxml = "^5.3.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"